topnav collapse, callbacks devise, set_expense, fix bootstrap(require bootstrap in .js)

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,24 +1,5 @@
-$color-header: #337AB7;
-$color-footer: #337AB7;
-$color-text-header: white;
-
-
-/*==================
-  HEADER
-  ==================*/
-  
-.header{
-  background-color: $color-header;
-  margin-bottom: 5%;
-  border-radius: 4px;
-  height: 50px;
-  color: $color-text-header;	
-
-}
-
-.header li a {
-  color: $color-text-header;		
-}
+$color-footer: #101010;
+$color-text: #9D9D9D;
 
 
 .table th, td{
@@ -33,7 +14,7 @@ $color-text-header: white;
 /* Set black background color, white text and some padding */
 footer {
   background-color: $color-footer;
-  color: white;
+  color: $color-text;
   padding: 15px;
   margin-top: 5%;
 }
